# PySophus

./: .gitmodules  CMakeLists.txt  README.md  setup.py  sophus.pyx  sophus_defs.pxd
src/: CMakeLists.txt  sophus.pyx
tests/: CMakeLists.txt  test_pysophus.py
